// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textUnderlineWidth renders 0 1`] = `
Array [
  .c0 {
  text-underline-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineWidth renders function 1`] = `
Array [
  .c0 {
  text-underline-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  text-underline-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineWidth renders negative number 1`] = `
Array [
  .c0 {
  text-underline-width: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-underline-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-underline-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineWidth renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-underline-width: July;
  }
}

@media April {
  .c0 {
    text-underline-width: August;
  }
}

@media January {
  .c0 {
    text-underline-width: September;
  }
}

@media April {
  .c0 {
    text-underline-width: November;
  }
}

@media June {
  .c0 {
    text-underline-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-underline-width: July;
  }
}

@media April {
  .c0 {
    text-underline-width: August;
  }
}

@media January {
  .c0 {
    text-underline-width: September;
  }
}

@media April {
  .c0 {
    text-underline-width: November;
  }
}

@media June {
  .c0 {
    text-underline-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-width: January;
  }
}

@media April {
  .c0 {
    text-underline-width: December;
  }
}

@media January {
  .c0 {
    text-underline-width: April;
  }
}

@media April {
  .c0 {
    text-underline-width: May;
  }
}

@media June {
  .c0 {
    text-underline-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-width: January;
  }
}

@media April {
  .c0 {
    text-underline-width: December;
  }
}

@media January {
  .c0 {
    text-underline-width: April;
  }
}

@media April {
  .c0 {
    text-underline-width: May;
  }
}

@media June {
  .c0 {
    text-underline-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineWidth renders postitive number 1`] = `
Array [
  .c0 {
  text-underline-width: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineWidth renders string 1`] = `
Array [
  .c0 {
  text-underline-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineWidth renders valid theme path 1`] = `
Array [
  .c0 {
  text-underline-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
